--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "lucide-react": "^0.563.0",
+    "react-big-calendar": "^1.19.4",
     "yup": "^1.7.1"
   }
 }
