--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,6 @@
 {
   "rewrites": [
+    { "source": "/api/(.*)", "destination": "https://life-os-bw73.onrender.com/api/$1" },
     { "source": "/(.*)", "destination": "/" }
   ]
 }
